archive/claim-cards/v279/supergene_oxidation.md
# CLAIM CARD — supergene_oxidation  (v279, seed 42, 200 steps)

**Anchor:** Tsumeb mine, Otavi Mountain Land, Namibia. 1st-stage gossan (uppermost supergene zone). One of the most mineralogically diverse deposits ever discovered (~280 species), type locality for germanium.
**Deposit:** Cold, oxygenated supergene weathering of a Pb-Zn-Cu sulfide pipe. Pb+Mo→wulfenite, Zn+CO3→smithsonite, Zn+As→adamite, Pb+As+Cl→mimetite, Fe→goethite, Ca+SO4→selenite, Cu+CO3→malachite. The 1st-stage gossan brings the high-Pb-As-Cl uppermost zone with mimetite, anglesite, cerussite, willemite, and Ge-bearing oxidation phases.
**Initial:** 35 °C, 0.05 kbar, wall=irregular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+whole-scenario-authored-inputs+authenticated-midrun-activation+phase-resolved-testimony-v6|fluid-boundary:declaration-driven-exact-replacement+automatic-voxel-population+complete-raw-target+net-only-total-closure+claim-card-declaration+scenario-scale+exact-transaction-set+full-replacement-authority+schema-closed-containers-v7|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-cell-local-salinity-pH-CuSO4-decay+truthful-trigger-mode+authenticated-current-enclosure-only-v4|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-four-tier-locality-dispatch+heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v6|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license-all-production-nucleators+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v11|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+exact-authored-acid-stage-sulfate+Cu-only-enrichment+Ca-sulfate-recharge+generic-fluid-receipts+secondary-sulfides-aspirational-until-parent-replacement+TSNB301-questionable-rhodochrosite-excluded-v3|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+morphology-completeness+basis+null-confining-pressure-v7|morphology-sampling:post-step-terminal+finite-depletion-explicit+nonfinite-and-derived-and-no-interface-unavailable+complete-positive-layer-testimony+replay-bound-live-state-v2|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|creative-replenishment:run-owned-recipe+exact-canonical-wet-voxel-replacement+fail-closed-target-domains+signed-pH-Eh+explicit-legacy-sulfur-authority+whole-sulfur-constructor-baseline+spatial-fluid-pool-and-authority-receipts-v2|save-identity:version+model+scenario+origin-bound-replenishment+fluid-and-sulfur-boundary-receipts+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+live-morphology+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v10
**Scenario spec hash:** 28660df40eb09bacafa9fe777a769e7c41dc015cef610d2a83f49164d5d78371
**Archived strip SHA-256:** a76da64df407d5cc4218258faf4a0714fb9280ee1d2562f10d9a2cd830d2944c

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (9):** wulfenite, smithsonite, adamite, mimetite, malachite, vanadinite, cerussite, selenite, conichalcite
**Deterministic accessories (21):** anglesite — A standard Pb-sulfate product of galena oxidation in generic supergene systems.; duftite — A plausible Pb-Cu arsenate competitor in the oxidized polymetallic broth.; goethite — A characteristic Fe-oxyhydroxide of gossan weathering.; stolzite — A plausible Pb-tungstate sink where oxidized Pb and W coexist.; brochantite — A common secondary Cu sulfate under oxidizing conditions.; ferrimolybdite — A characteristic oxidized Fe-Mo product in weathered Mo-bearing ore.; jarosite — A characteristic acidic Fe-sulfate product of sulfide oxidation.; scorodite — A characteristic Fe-arsenate sink in oxidized arsenic-bearing ore.; powellite — A plausible Ca-molybdate competitor in a generic oxidized Mo-bearing system.; azurite — A standard Cu-carbonate competitor with malachite under higher carbonate activity.; lepidocrocite — A plausible minor Fe-oxyhydroxide competitor in the vadose gossan.; aurichalcite — A plausible mixed Zn-Cu carbonate-hydroxide in the carbonate-buffered supergene zone.; cuprite — A characteristic Cu oxide in oxidized native-copper/chalcocite zones.; caledonite — A plausible mixed Pb-Cu carbonate-sulfate in polymetallic oxidation.; olivenite — A plausible Cu arsenate competitor in the oxidized As-bearing broth.; raspite — A plausible monoclinic Pb-tungstate polymorph competing with stolzite.; annabergite — A classic Ni-arsenate bloom during arsenide weathering.; erythrite — A classic Co-arsenate bloom during arsenide weathering.; plumbogummite — A plausible late Pb-Al-phosphate crust in acidic oxidized drainage.; pyromorphite — A common Pb-phosphate-chloride product of lead-ore weathering.; descloizite — A plausible Zn-dominant Pb vanadate competitor with vanadinite.
**Statistical (0):** (none)
**Aspirational (2):** chalcocite — Confirmed and very common at Tsumeb (TSNB76), but USGS supergene models form it by Cu-bearing solutions replacing primary pyrite/chalcopyrite. This first-stage gossan model has no authenticated parent-solid replacement route, so it remains positively licensed without a deterministic fluid-only promise.; covellite — Documented as a Tsumeb supergene replacement product, but the simulator does not yet execute the required parent-sulfide replacement interface. It remains positively licensed rather than being forced by a chemically incompatible dissolved-sulfide pulse.
**Locality exclusions (4):** rhodochrosite — Harvard Tsumeb Mine Notebook record TSNB301 labels rhodochrosite at Tsumeb Questionable pending reliable confirmation; chemical plausibility alone is not enough to assert it in this first-stage gossan scenario.; pharmacolite — No Tsumeb occurrence was found in the live Mindat locality list or Harvard Tsumeb Mine Notebook search audited 2026-08-06; the Ca-arsenate engine remains available in documented five-element-vein localities and Creative mode.; haidingerite — No Tsumeb occurrence was found in the live Mindat locality list or Harvard Tsumeb Mine Notebook search audited 2026-08-06; a chemically possible pharmacolite dehydration product is not evidence of this locality occurrence.; koettigite — Scenario-local zone exclusion: Bowell 2014 documents köttigite at Tsumeb only in the third oxidation zone Level 44 zinc pocket, whereas this scenario authors the carbonate-buffered first-stage gossan. The global engine remains available in Creative mode and a future documented third-zone scenario.

**Cited sources:**
  - Pinch & Wilson 1977 — canonical Tsumeb monograph
  - Lombaard et al. 1986 — Tsumeb geology
  - Melcher 2003 — Tsumeb Ge geochemistry
  - Seo et al. 2012 — Pb+Mo simultaneous weathering for wulfenite formation
  - Hemley et al. 1969 — alunite stability + Al solubility under acid-sulfate conditions
  - Stoffregen et al. 2000 — alunite-jarosite paragenesis review
  - Strunz 1959 — Tsumeb deep oxidation zone scheelite + lead-tungstate suite (raspite + stolzite)
  - Bowell 2014, Rev. Mineral. Geochem. 79:589 — Tsumeb hydrogeochemistry + arsenate mineral stability (the acid-front movement)
  - Singer & Stumm 1970, Science 167:1121 — Fe(II)→Fe(III) as the rate-determining step of sulfide-oxidation acid generation
  - USGS SIR 2010-5070-B, Porphyry Copper Deposit Model — supergene Cu enrichment by selective replacement of primary pyrite/chalcopyrite with chalcocite/covellite below the water table
  - USGS OFR 2009-1235 — supergene enrichment-zone replacement rims and pseudomorphs of chalcocite/covellite on primary sulfides
  - Harvard Tsumeb Mine Notebook TSNB76 and TSNB79 — confirmed chalcocite/chalcopyrite and documented supergene replacement relations at Tsumeb
  - Skarpelis 2009, Resource Geology 59(1) — Lavrion Pb-Ag-Zn supergene oxidation profile (carbonate-hosted analogue)
  - Harvard Mineralogical & Geological Museum, Tsumeb Mine Notebook TSNB159 — gypsum is a confirmed, somewhat rare Tsumeb mineral from all three oxidation zones; well-formed crystals reach centimetre scale
  - Harvard Mineralogical & Geological Museum, Tsumeb Mine Notebook TSNB301 — rhodochrosite occurrence status Questionable pending reliable confirmation
  - Mindat locality record 2428, Tsumeb Mine mineral list — live species-list audit on 2026-08-06 found no pharmacolite or haidingerite entry
  - Harvard Mineralogical & Geological Museum, Tsumeb Mine Notebook searchable catalog — live audit on 2026-08-06 found no pharmacolite or haidingerite object entry
  - Ciesielczuk et al. 2020, Minerals 10(6):548, doi:10.3390/min10060548 — köttigite stability at pH < 3 and extensive erythrite–köttigite solid solution
  - Bowell 2014, Reviews in Mineralogy and Geochemistry 79:589–627 — Tsumeb köttigite restricted to the third oxidation zone Level 44 zinc pocket

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (30 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | adamite | 1 | 1 | 0 | nucleation |
| 2 | anglesite | 1 | 4 | 0 | nucleation |
| 3 | cerussite | 1 | 4 | 0 | nucleation |
| 4 | duftite | 1 | 2 | 0 | nucleation |
| 5 | goethite | 1 | 1 | 0 | nucleation |
| 6 | malachite | 1 | 1 | 0 | nucleation |
| 7 | mimetite | 1 | 2 | 0 | nucleation |
| 8 | wulfenite | 1 | 1 | 0 | nucleation |
| 9 | conichalcite | 2 | 4 | 0 | nucleation |
| 10 | stolzite | 2 | 4 | 0 | nucleation |
| 11 | brochantite | 3 | 5 | 0 | nucleation |
| 12 | ferrimolybdite | 4 | 6 | 0 | nucleation |
| 13 | scorodite | 8 | 10 | 0 | nucleation |
| 14 | powellite | 13 | 4 | 0 | nucleation |
| 15 | smithsonite | 14 | 1 | 0 | nucleation |
| 16 | azurite | 17 | 4 | 0 | nucleation |
| 17 | lepidocrocite | 20 | 1 | 0 | nucleation |
| 18 | aurichalcite | 24 | 4 | 0 | nucleation |
| 19 | cuprite | 55 | 1 | 0 | nucleation |
| 20 | caledonite | 70 | 2 | 0 | nucleation |
| 21 | selenite | 70 | 1 | 0 | nucleation |
| 22 | olivenite | 75 | 4 | 0 | nucleation |
| 23 | raspite | 84 | 4 | 0 | nucleation |
| 24 | annabergite | 95 | 1 | 0 | nucleation |
| 25 | erythrite | 95 | 1 | 0 | nucleation |
| 26 | plumbogummite | 115 | 3 | 0 | nucleation |
| 27 | pyromorphite | 115 | 6 | 0 | nucleation |
| 28 | vanadinite | 130 | 6 | 0 | nucleation |
| 29 | jarosite | 135 | 6 | 0 | nucleation |
| 30 | descloizite | 139 | 4 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** chalcocite, covellite
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 33.26089435471213 → 24.999999999999915 °C  [24.999999999999893, 48.60449873260221] (raw_simulation_state)
  - pH: 6.8 → 4.501668152648836   [4.2847801315982075, 6.873928397942787] (raw_simulation_state)
  - Eh: 322.1090020413224 → 220 mV  [131.26050015345746, 356.9690723288825] (raw_simulation_state)
  - salinity: 2 → 2 psu  [2, 2] (raw_simulation_state)
  - O2: 1.8 → 1 ppm (mg/kg solvent)  [0.6, 2.2] (raw_simulation_state)
  - concentration: 1 → 3 ×  [1, 3] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -0.945 → -4.031  [-4.724, -0.252]
  - SI_aragonite: -1.071 → -4.157  [-4.85, -0.378]
  - SI_dolomite: -2.835 → -8  [-8, -0.693]
  - SI_HMC: -1.008 → -4.094  [-4.787, -0.252]
  - SI_siderite: 0.945 → -2.772  [-3.213, 1.323]
  - SI_selenite: -1.449 → 0.063  [-1.449, 0.063]
  - SI_anhydrite: -1.638 → -0.189  [-1.701, 0]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -8 → -8  [-8, -8]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 0.05 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 2.917 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 58.73 °C; initial a_w=0.999 ±0.010 (calibrated-proxy)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: active; active=true; ΔlogK=0.050955796; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.051 relative to 1 bar at the same temperature.
    - aragonite: active; active=true; ΔlogK=0.048685792; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.049 relative to 1 bar at the same temperature.
    - dolomite: active; active=true; ΔlogK=0.09720727800000001; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.097 relative to 1 bar at the same temperature.
    - siderite: active; active=true; ΔlogK=0.048471978000000006; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.048 relative to 1 bar at the same temperature.
    - rhodochrosite: active; active=true; ΔlogK=0.045546822; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.046 relative to 1 bar at the same temperature.
    - anhydrite: active; active=true; ΔlogK=0.042060982; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.042 relative to 1 bar at the same temperature.
    - barite: active; active=true; ΔlogK=0.042262138; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.042 relative to 1 bar at the same temperature.
    - celestine: active; active=true; ΔlogK=0.041801546; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.042 relative to 1 bar at the same temperature.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 0.05 → 0.05 kbar [0.05, 0.05], n=200
  - Rock/confining pressure: not recorded
  - Temperature: 33.26089435471213 → 24.999999999999915 °C [24.999999999999893, 48.60449873260221], n=200
  - Secure aragonite assessment: 0/200 executed steps; first={"boundary_kbar":2.9294572172274376,"secure_aragonite":false}, last={"boundary_kbar":2.9888905400000008,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":200}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Mineral transformations: none executed.
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v2/5577593478ad0f27fecb099927f62b455ec49d5ab0d37bc67af7800c7993ecb1.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact net spatial closure is authenticated by the strip SHA-256; gross per-voxel replacement exchange is intentionally not claimed
  - Closure: 2/2 transactions; all_closed=true.
  - Step 55: closed=true; declarations=[{"kind":"addition","source":"Tsumeb Cu-bearing oxidized leachate boundary","fields":{"Cu":50,"Fe":10}}]; testimony=[{"field":"Cu","before":55,"after":105,"declaredAddition":50,"declaredReplacementTarget":null,"declaredDelta":50,"declaredImports":50,"declaredExports":0,"actualDelta":50,"error":0,"tolerance":1.05e-7,"unit":"mg_per_kg_solvent","spatial":{"count":7680,"beforeFiniteCount":7680,"unit":"mg_per_kg_solvent","beforeValueTotal":422062.20754741784,"expectedAfterValueTotal":806062.2075474162,"scope":"canonical-wet-voxel-volume","fluxBasis":"authenticated-net-only; gross-per-voxel-replacement-exchange-not-published","afterCount":7680,"afterFiniteCount":7680,"afterValueTotal":806062.2075474162,"expectedNet":384000,"actualNet":383999.99999999837,"error":-1.6298145055770874e-9,"tolerance":0.0008060622075474163,"closed":true},"closed":true},{"field":"Fe","before":46.315679032987106,"after":56.315679032987106,"declaredAddition":10,"declaredReplacementTarget":null,"declaredDelta":10,"declaredImports":10,"declaredExports":0,"actualDelta":10,"error":0,"tolerance":1e-7,"unit":"mg_per_kg_solvent","spatial":{"count":7680,"beforeFiniteCount":7680,"unit":"mg_per_kg_solvent","beforeValueTotal":355474.61278056016,"expectedAfterValueTotal":432274.612780561,"scope":"canonical-wet-voxel-volume","fluxBasis":"authenticated-net-only; gross-per-voxel-replacement-exchange-not-published","afterCount":7680,"afterFiniteCount":7680,"afterValueTotal":432274.612780561,"expectedNet":76800,"actualNet":76800.00000000081,"error":8.149072527885437e-10,"tolerance":0.000432274612780561,"closed":true},"closed":true}].
  - Step 70: closed=true; declarations=[{"kind":"addition","source":"Tsumeb dry-season Ca recharge","fields":{"Ca":350}}]; testimony=[{"field":"Ca","before":214.73518549480664,"after":564.7351854948066,"declaredAddition":350,"declaredReplacementTarget":null,"declaredDelta":350,"declaredImports":350,"declaredExports":0,"actualDelta":350,"error":0,"tolerance":5.647351854948067e-7,"unit":"mg_per_kg_solvent","spatial":{"count":7680,"beforeFiniteCount":7680,"unit":"mg_per_kg_solvent","beforeValueTotal":1649106.1818527435,"expectedAfterValueTotal":4337106.181852592,"scope":"canonical-wet-voxel-volume","fluxBasis":"authenticated-net-only; gross-per-voxel-replacement-exchange-not-published","afterCount":7680,"afterFiniteCount":7680,"afterValueTotal":4337106.181852592,"expectedNet":2688000,"actualNet":2687999.9999998487,"error":-1.5133991837501526e-7,"tolerance":0.004337106181852592,"closed":true},"closed":true}].

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 23: duftite #3 enclosed mimetite #2; route=host-on-guest; host net layer=13.110645495770717 µm; distance/reach=0/5.59614100425421 mm; size ratio=9.440170595080442; guest recent=1.8017876558308037 µm; guest core/loss/remaining=9.613695678994242/0/9.613695678994242 µm; partial loss=false.
  - Step 28: ferrimolybdite #42 enclosed scorodite #30; route=geometric-overlap; host net layer=80.7334459746134 µm; distance/reach=4.554793695860634/5.59614100425421 mm; size ratio=42.810821870034914; guest recent=-42.23896546994999 µm; guest core/loss/remaining=144.47793093989998/132.23896546995/12.238965469949989 µm; partial loss=true.
  - Step 31: conichalcite #45 enclosed scorodite #18; route=host-on-guest; host net layer=107.88856563764938 µm; distance/reach=0/5.59614100425421 mm; size ratio=3.3128259863618843; guest recent=-45 µm; guest core/loss/remaining=324.46017390839756/180/144.46017390839756 µm; partial loss=true.
  - Step 70: brochantite #20 enclosed cuprite #55; route=geometric-overlap; host net layer=72.77275131717983 µm; distance/reach=5.220349903477895/7.040377544616951 mm; size ratio=24.36909311560297; guest recent=0.2406855892069224 µm; guest core/loss/remaining=89.88945040810664/10/79.88945040810664 µm; partial loss=true.
  - Step 136: malachite #4 enclosed aurichalcite #41; route=geometric-overlap; host net layer=306.426313483035 µm; distance/reach=50.93482478502761/63.31602971415589 mm; size ratio=13.383682965186981; guest recent=-30 µm; guest core/loss/remaining=2355.1222097309837/30/2325.1222097309837 µm; partial loss=true.
  - Step 136: brochantite #12 enclosed aurichalcite #49; route=geometric-overlap; host net layer=73.58339467399855 µm; distance/reach=12.806005778521657/13.225833720229506 mm; size ratio=3.652787123590755; guest recent=-30 µm; guest core/loss/remaining=1886.717844966103/30/1856.717844966103 µm; partial loss=true.
  - Step 136: wulfenite #7 enclosed aurichalcite #51; route=geometric-overlap; host net layer=117.70628039946595 µm; distance/reach=10.868590123683845/16.526761807163787 mm; size ratio=6.463899703557314; guest recent=-30 µm; guest core/loss/remaining=1679.6750832188404/30/1649.6750832188404 µm; partial loss=true.
  - Step 136: brochantite #20 enclosed aurichalcite #53; route=geometric-overlap; host net layer=73.92783412964144 µm; distance/reach=6.711951890205309/15.100467551091208 mm; size ratio=5.3908194512545675; guest recent=-30 µm; guest core/loss/remaining=1270.63937440274/30/1240.63937440274 µm; partial loss=true.
  - Step 161: ferrimolybdite #54 enclosed azurite #33; route=geometric-overlap; host net layer=72.77554967345262 µm; distance/reach=19.245142220759256/38.2119846827433 mm; size ratio=6.998173459608861; guest recent=-14.34343493948171 µm; guest core/loss/remaining=2623.2499020340024/30/2593.2499020340024 µm; partial loss=true.
  - Step 161: powellite #47 enclosed azurite #39; route=geometric-overlap; host net layer=155.61181459929878 µm; distance/reach=13.311666142208795/41.30566438354982 mm; size ratio=6.714287522007723; guest recent=-3.742523922103821 µm; guest core/loss/remaining=2939.187759713936/30/2909.187759713936 µm; partial loss=true.
  - Step 161: ferrimolybdite #15 enclosed azurite #43; route=geometric-overlap; host net layer=65.1900971820188 µm; distance/reach=17.606239233338947/38.17303585149267 mm; size ratio=6.867759969905078; guest recent=-4.46080377382545 µm; guest core/loss/remaining=2940.388526736961/30/2910.388526736961 µm; partial loss=true.
  - Step 161: ferrimolybdite #42 enclosed azurite #46; route=geometric-overlap; host net layer=68.39354680551072 µm; distance/reach=28.81443740776881/36.775758556321215 mm; size ratio=6.480379154439058; guest recent=-5.670221692780476 µm; guest core/loss/remaining=2984.3393673886467/30/2954.3393673886467 µm; partial loss=true.
  - Step 161: ferrimolybdite #26 enclosed raspite #94; route=geometric-overlap; host net layer=60.78659065823033 µm; distance/reach=8.0367882958177/41.21978234155683 mm; size ratio=214.30692560162302; guest recent=2.2361779877814394 µm; guest core/loss/remaining=92.0691852702951/0/92.0691852702951 µm; partial loss=false.
  - Step 165: malachite #4 enclosed erythrite #65; route=geometric-overlap; host net layer=146.86236380874746 µm; distance/reach=26.853457988035704/78.2737933380063 mm; size ratio=55.85880838872345; guest recent=0.6499109662181972 µm; guest core/loss/remaining=708.3632658910475/6/702.3632658910475 µm; partial loss=true.
  - Step 172: ferrimolybdite #26 enclosed smithsonite #29; route=geometric-overlap; host net layer=80.4565703079335 µm; distance/reach=18.113450622286955/42.97826686418619 mm; size ratio=7.301035109016194; guest recent=-23.44875554696623 µm; guest core/loss/remaining=2879.2676174394605/50/2829.2676174394605 µm; partial loss=true.
  - Step 172: malachite #4 enclosed annabergite #66; route=geometric-overlap; host net layer=187.6341393927235 µm; distance/reach=26.854392577264573/80.60501367687218 mm; size ratio=56.983142135275834; guest recent=-7.834156007274282 µm; guest core/loss/remaining=722.0368924149974/12/710.0368924149974 µm; partial loss=true.
  - Step 176: ferrimolybdite #26 enclosed conichalcite #9; route=geometric-overlap; host net layer=78.1855451769803 µm; distance/reach=29.988347590813273/44.76776145166753 mm; size ratio=4.18859973180039; guest recent=-15 µm; guest core/loss/remaining=5027.9328434489325/15/5012.9328434489325 µm; partial loss=true.
  - Step 176: ferrimolybdite #48 enclosed conichalcite #14; route=geometric-overlap; host net layer=76.54509147275526 µm; distance/reach=24.633524891696396/36.5737448173383 mm; size ratio=3.2909895283013046; guest recent=-15 µm; guest core/loss/remaining=5079.78501841585/15/5064.78501841585 µm; partial loss=true.
  - Step 176: malachite #4 enclosed conichalcite #45; route=geometric-overlap; host net layer=146.58807530077632 µm; distance/reach=31.42257833161497/82.86898051509844 mm; size ratio=8.233574672485275; guest recent=-15 µm; guest core/loss/remaining=5001.7420606048/15/4986.7420606048 µm; partial loss=true.
  - Step 176: ferrimolybdite #26 enclosed conichalcite #50; route=geometric-overlap; host net layer=78.1855451769803 µm; distance/reach=23.601980073503864/44.787351158766235 mm; size ratio=4.161495677824075; guest recent=-15 µm; guest core/loss/remaining=5060.582355280104/15/5045.582355280104 µm; partial loss=true.
  - Final inclusion status: 20 current; 20 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Ledger activation: step 5, kind=legacy_combined_to_explicit_reservoirs, closed=true; initial fluid=383999.7406167593 ppm; initial solid=0.2593832409040786 ppm.
  - Closure: 196/196 samples; all_closed=true; max |balance error|=1.6763806343078613e-8 ppm; max |testimony error|=3.3993273973464966e-8 ppm.
  - Fluid reservoirs (sulfide/sulfate/elemental), first → last: {"sulfide":104305.28130863959,"sulfate":433294.268057326,"elemental":0} → {"sulfide":104305.28130864969,"sulfate":3581802.775681196,"elemental":0}.
  - Solid reservoirs, first → last: {"sulfide":0,"sulfate":0.19125081308887815,"elemental":0,"unclassified":0.2593832409040786} → {"sulfide":0,"sulfate":291.68362690789655,"elemental":0,"unclassified":0.2593832409040786}.
  - Phase identities: anglesite→sulfate, brochantite→sulfate, caledonite→sulfate, jarosite→sulfate, selenite→sulfate, anglesite→unclassified, brochantite→unclassified.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 9540; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=0.
  - Registered-mineral morphology: positive=0; classified=0; unavailable=0; terminal-depleted=0; regimes={}; bases={}.
  - Habit crystal 1: adamite; prismatic; extent=individual; forms=["elongated prisms","wedge-shaped"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 2: mimetite; tabular; extent=individual; forms=["thick tabular hexagons"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 3: duftite; botryoidal_crust; extent=individual; forms=["olive-green botryoidal crust on Pb-Cu carbonate"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 4: malachite; banded_massive; extent=aggregate; forms=["banded botryoidal","concentric layers"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":9,"status":"Handbook record includes crystals, sprays, and crude composite aggregates to 9 cm; larger botryoidal/stalactitic bodies are aggregate extents and are bounded by cavity capacity, not mislabeled as one crystal.","sources":["Handbook of Mineralogy, Malachite (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/malachite.pdf"]}; CDR=null.
  - Habit crystal 5: cerussite; acicular; extent=individual; forms=["fine {110} needles","radiating sprays"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 6: goethite; botryoidal/stalactitic; extent=individual; forms=["botryoidal masses","velvety surfaces"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 7: wulfenite; intergrown_thin_plates; extent=aggregate; forms=["intergrown {001} plates","fragile reticulated aggregate"]; size authority={"extent_kind":"aggregate","cap_cm":120,"record_cm":60,"status":"Resolved authority is ~10-11 cm for a substantiated individual tablet. Reports to 60-61 cm explicitly describe extremely thin, fragile, intergrown material; retained as aggregate testimony, not promoted to an individual-crystal record.","sources":["Rickwood 1981, American Mineralogist 66:885-907, https://msaweb.org/AmMin/AM66/AM66_885.pdf"]}; CDR=null.
  - Habit crystal 8: anglesite; prismatic_orthorhombic; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 9: conichalcite; acicular; extent=individual; forms=["radiating acicular needles","prismatic {110} clusters","emerald-green"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.
  - Habit crystal 10: duftite; botryoidal_crust; extent=individual; forms=["olive-green botryoidal crust on Pb-Cu carbonate"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 11: stolzite; tabular_tetragonal; extent=individual; forms=["{001} tabular plate","tetragonal honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 12: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 13: anglesite; pseudomorph_after_galena; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 14: conichalcite; acicular; extent=individual; forms=["radiating acicular needles","prismatic {110} clusters","emerald-green"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.
  - Habit crystal 15: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 16: anglesite; prismatic_orthorhombic; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 17: anglesite; default_prismatic; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 18: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 19: cerussite; acicular; extent=individual; forms=["fine {110} needles","radiating sprays"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 20: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 21: stolzite; tabular_tetragonal; extent=individual; forms=["{001} tabular plate","tetragonal honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 22: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 23: cerussite; acicular; extent=individual; forms=["fine {110} needles","radiating sprays"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 24: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 25: cerussite; acicular; extent=individual; forms=["fine {110} needles","radiating sprays"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 26: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 27: stolzite; tabular_tetragonal; extent=individual; forms=["{001} tabular plate","tetragonal honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 28: powellite; pulverulent_crust; extent=individual; forms=["yellow crusty supergene coating"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 29: smithsonite; botryoidal/stalactitic; extent=aggregate; forms=["botryoidal crusts","stalactitic masses"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents uncommon individual crystals to 10 cm but gives no defensible maximum for botryoidal, reniform, stalactitic, or massive bodies; aggregate extent is capacity-bound.","sources":["Handbook of Mineralogy, Smithsonite (Anthony et al.), https://handbookofmineralogy.org/wp-content/uploads/2022/07/smithsonite.pdf"]}; CDR=null.
  - Habit crystal 30: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 31: powellite; pulverulent_crust; extent=individual; forms=["yellow crusty supergene coating"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 32: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 33: azurite; azurite_sun; extent=individual; forms=["radiating flat disc","azurite-sun in fracture"]; size authority={"extent_kind":"individual","cap_cm":25,"record_cm":12.5}; CDR=null.
  - Habit crystal 34: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 35: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 36: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 37: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 38: lepidocrocite; platy_scales; extent=individual; forms=["{010} platy scales","perfect basal cleavage (mica-like)"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.
  - Habit crystal 39: azurite; azurite_sun; extent=individual; forms=["radiating flat disc","azurite-sun in fracture"]; size authority={"extent_kind":"individual","cap_cm":25,"record_cm":12.5}; CDR=null.
  - Habit crystal 40: mimetite; campylite (barrel-shaped); extent=individual; forms=["barrel-shaped hexagonal prisms","curved faces"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 41: aurichalcite; tufted_spray; extent=individual; forms=["divergent acicular sprays","tufted aggregates"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 42: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 43: azurite; azurite_sun; extent=individual; forms=["radiating flat disc","azurite-sun in fracture"]; size authority={"extent_kind":"individual","cap_cm":25,"record_cm":12.5}; CDR=null.
  - Habit crystal 44: powellite; pulverulent_crust; extent=individual; forms=["yellow crusty supergene coating"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 45: conichalcite; acicular; extent=individual; forms=["radiating acicular needles","prismatic {110} clusters","emerald-green"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.
  - Habit crystal 46: azurite; azurite_sun; extent=individual; forms=["radiating flat disc","azurite-sun in fracture"]; size authority={"extent_kind":"individual","cap_cm":25,"record_cm":12.5}; CDR=null.
  - Habit crystal 47: powellite; pulverulent_crust; extent=individual; forms=["yellow crusty supergene coating"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 48: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 49: aurichalcite; tufted_spray; extent=individual; forms=["divergent acicular sprays","tufted aggregates"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 50: conichalcite; acicular; extent=individual; forms=["radiating acicular needles","prismatic {110} clusters","emerald-green"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.
  - Habit crystal 51: aurichalcite; tufted_spray; extent=individual; forms=["divergent acicular sprays","tufted aggregates"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 52: stolzite; tabular_tetragonal; extent=individual; forms=["{001} tabular plate","tetragonal honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 53: aurichalcite; tufted_spray; extent=individual; forms=["divergent acicular sprays","tufted aggregates"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 54: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 55: cuprite; octahedral; extent=individual; forms=["{111} octahedron","dark red to black with ruby internal reflection"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 56: selenite; tabular; extent=individual; forms=["{010} blades","transparent"]; size authority={"extent_kind":"individual","cap_cm":2400,"record_cm":1200,"status":"Naica's 11-12 m selenite beams are individual crystals. Satin-spar fiber packs and desert-rose rosettes are aggregate habits with no universal record extent and are capacity-bound.","sources":["García-Ruiz et al. 2007, Geology 35:327-330","Van Driessche et al. 2011, PNAS 108:15721-15726","Pérez-Rodríguez et al. 2018, Crystal Growth & Design 18:6231-6243"]}; CDR=null.
  - Habit crystal 57: caledonite; prismatic_acicular; extent=individual; forms=["prismatic [001]","1-10 mm crystals to 30 mm rare","blue-green"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 58: caledonite; prismatic_acicular; extent=individual; forms=["prismatic [001]","1-10 mm crystals to 30 mm rare","blue-green"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 59: olivenite; prismatic; extent=individual; forms=["{110} prism","olive-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 60: olivenite; fibrous; extent=individual; forms=["radiating acicular fibers","olive-green silky"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 61: raspite; tabular_monoclinic; extent=individual; forms=["monoclinic tabular plate","honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 62: olivenite; globular; extent=individual; forms=[]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 63: olivenite; fibrous; extent=individual; forms=["radiating acicular fibers","olive-green silky"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 64: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 65: erythrite; cobalt_bloom; extent=individual; forms=["earthy crimson-pink crust","cobalt bloom"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 66: annabergite; co_bearing; extent=individual; forms=["pinkish-green intermediate crust"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 67: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 68: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 69: raspite; tabular_monoclinic; extent=individual; forms=["monoclinic tabular plate","honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 70: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 71: raspite; tabular_monoclinic; extent=individual; forms=["monoclinic tabular plate","honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 72: scorodite; earthy_crust; extent=individual; forms=["powdery greenish-brown crust"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 73: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 74: plumbogummite; encrusting_pyromorphite; extent=individual; forms=["cobalt-blue botryoidal crust over hexagonal prisms","follows the pyromorphite substrate surface","active green pyromorphite tips may project through"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 75: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 76: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 77: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 78: plumbogummite; encrusting_pyromorphite; extent=individual; forms=["cobalt-blue botryoidal crust over hexagonal prisms","follows the pyromorphite substrate surface","active green pyromorphite tips may project through"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 79: plumbogummite; botryoidal_mammillary; extent=individual; forms=["cobalt-blue botryoidal crust","mammillary surface","concentric layered interior"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 80: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 81: pyromorphite; brown_hex_barrel; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} flat pinacoid","barrel profile"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 82: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 83: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 84: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 85: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 86: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 87: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 88: descloizite; prismatic; extent=individual; forms=["{010} pyramid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 89: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 90: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 91: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 92: descloizite; prismatic; extent=individual; forms=["{010} pyramid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 93: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 94: raspite; tabular_monoclinic; extent=individual; forms=["monoclinic tabular plate","honey-yellow"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 95: descloizite; prismatic; extent=individual; forms=["{010} pyramid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 96: jarosite; druzy; extent=individual; forms=["microcrystalline druse"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 97: descloizite; prismatic; extent=individual; forms=["{010} pyramid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 98: vanadinite; endlichite_yellow; extent=individual; forms=["{10̄10} hexagonal prism","c{0001} pinacoid","flat basal termination"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.

## Scenario notes (author's own rationale)
> Anchor: Tsumeb mine (Otavi Mountain Land, Namibia). Pipe-shaped Pb-Zn-Cu sulfide body in Neoproterozoic dolomite, with three distinct supergene oxidation zones developed during Mesozoic-Cenozoic uplift. Argentiferous (native Ag, proustite, pyrargyrite, argentiferous galena). References: Pinch & Wilson 1977 (canonical Tsumeb monograph), Lombaard et al. 1986 (geology), Melcher 2003 (Ge geochemistry).

> Acid-window mechanic (steps 5-16): the supergene_acidification handler fires FOUR times (steps 5/8/12/16) to hold pH near 4 against the limestone wall's carbonate buffering. Without the repeated pulses, the buffer neutralizes pH back to 6+ within ~5 steps. The 15-step acid window is when scorodite + jarosite + alunite nucleate. ev_meteoric_flush at step 20 ends the acid phase.

> Chemistry-audit gap-fill pass (Apr 2026): added Ag (Tsumeb's silver suite), Ge (the type-locality element), Sb (proustite-pyrargyrite + tetrahedrite enabling), Na/K (minor groundwater cation traces), Au=0.3 (sub-threshold trace, no nucleation). v5 gap-fills: Al=25 (alunite enabling per Hemley 1969 + Stoffregen 2000), W=20 (Round 8d-1, Tsumeb deep-zone scheelite + raspite + stolzite per Strunz 1959). Existing 8-event sequence preserved untouched.

> LIVE LOCALITY RECONCILIATION (2026-08-11): the current Mindat Tsumeb Mine locality list and Harvard Tsumeb Mine Notebook were checked directly. Neither pharmacolite nor haidingerite appears. Rhodochrosite record TSNB301 is explicitly Questionable pending reliable confirmation, so it is also excluded rather than inferred from fluid chemistry. Gypsum/selenite remains licensed independently by record TSNB159.

> KÖTTIGITE ZONE CORRECTION (2026-08-08): Bowell 2014 reports köttigite only from Tsumeb's third oxidation zone Level 44 zinc pocket, associated with and partly replacing adamite. Ciesielczuk et al. 2020 places köttigite stability at pH < 3. This first-stage carbonate-buffered gossan does not reach that field and enforces a scenario-local exclusion; the documented deep-zone occurrence remains eligible for a future separately authored scenario.
